traefik-path-rewrite-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: remove-prefix
spec:
  stripPrefix:
    prefixes:
      - /kubecost
