kubecost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubecost-internal

spec:
  ports:
    - name: main
      port: 9090
      targetPort: 9090

  selector:
    app: cost-analyzer
